# oat_web_test

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
apps/oat_web_test/: CMakeLists.txt
cmake/: config.cmake
oat_web_test/src/: main.cpp
res/: config.h.in
